# 3DConsoleEngine

./: CMakeLists.txt
3DConsoleEngine/include/core/: Pixel.h  Shaders.h  Window.h
3DConsoleEngine/include/math/: Vector.h
3DConsoleEngine/include/shapes/: Line.h
3DConsoleEngine/src/: main.cpp
3DConsoleEngine/src/core/: Window.cpp
